  show "view" instead of "view/restore" on logs.
* (bug 19017) TOC level calculation error in an odd case
* (bug 18999) CSS update for RTL interwiki links
* (bug 18925) history.js removes class names of list elements on initialization
* Multiple whitespace in TOC anchors is now stripped, for consistency with the
  link from the edit comment

== API changes in 1.16 ==

* Added uiprop=changeablegroups to meta=userinfo
* Added usprop=gender to list=users
* (bug 18311) action=purge now works for images too
* Add parentid to prop=revisions output
* (bug 17832) action=delete returns 'unknownerror' instead of 'permissiondenied'
  when the user is blocked
* (bug 18546) Added timestamp of new revision to action=edit output
* (bug 18554) Also list hidden revisions in list=usercontribs for privileged
  users
* (bug 13049) "API must be accessed from the primary script entry point" error
* (bug 16422) Don't display help for format=jsonfm unless specifically requested
* Added PHP and database version to meta=siteinfo output
* (bug 18533) Add readonly message to meta=siteinfo output
* (bug 18518) Add clprop=hidden to prop=categories
* (bug 18710) Fixed internal error with empty parameter in action=paraminfo
* (bug 18709) Missing descriptions for some parameters in action=paraminfo
  output
* (bug 18731) Show correct SVN links for extension modules in api.php?version
* (bug 18730) Add version information to action=paraminfo output
* (bug 18743) Add ucprop=size to list=usercontribs
* (bug 18749) Add generator flag to action=paraminfo output
* Make action=block respect $wgEnableUserEmail and $wgSysopEmailBans
* Made deleting file description pages without files possible
* (bug 18773) Add content flag to siprop=namespaces output
* (bug 18785) Add siprop=languages to meta=siteinfo

=== Languages updated in 1.16 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as